--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.7.9",
     "base-64": "^1.0.0",
     "bcrypt": "^5.1.1",
+    "cheerio": "^1.0.0",
     "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
